<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/categoryBtnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvCategoryChosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:typeface="monospace"
            android:textAllCaps="true"
            android:letterSpacing="0.1"
            android:shadowColor="#62FF00"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:layout_marginBottom="150dp" />

        <Button
            android:id="@+id/superheroCategoryBtn"
            android:layout_width="250dp"
            android:layout_height="130dp"

            android:background="@drawable/fragment_category_design"
            android:text="@string/superhero"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:layout_marginBottom="100dp"
            android:scaleType="centerCrop"
            />

        <Button
            android:id="@+id/brainrotCategoryBtn"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:background="@drawable/fragment_category_design"
            android:text="@string/brainrot"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:scaleType="centerCrop" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>